updated sidebar image apears broken

--- a/sidebarWebview.html
+++ b/sidebarWebview.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webview</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <h1>Hello from Webview!</h1>
-  </body>
+    <div class="container">
+        <div class="image-container">
+            <!-- Replace with your image source -->
+            <img id="rock" src="./media/icon.png" alt="Descriptive Image Text">
+        </div>
+        <div class="text-area-container">
+            <textarea rows="10" cols="30">Enter your text here...</textarea>
+        </div>
+    </div>
+</body>
 </html>
