--- a/sidebarWebview.html
+++ b/sidebarWebview.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello from Webview!</h1>
+    <h1>Now what`s my madafakin name?</h1>
     <div class="container">
         <div class="image-container">
             <!-- Replace with your image source -->
