ctrl-r retrieves selected text and outputs it in the sidebar

--- a/sidebarWebview.html
+++ b/sidebarWebview.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Now what`s my madafakin name?</h1>
-    <div class="container">
-        <div class="image-container">
-            <!-- Replace with your image source -->
-            <img id="rock" src="./media/icon.png" alt="Descriptive Image Text">
-        </div>
-        <div class="text-area-container">
-            <textarea rows="10" cols="30">Enter your text here...</textarea>
-        </div>
-    </div>
+    <h1>'${selectedText}'</h1>
+  
 </body>
 </html>
